@@ -33,35 +33,49 @@ public class RewardService {
 
     public RewardResponse calculateRewards(Long customerId,
                                            LocalDate startDate,
-                                           LocalDate endDate) {
+                                           LocalDate endDate,
+                                           Integer months) {
 
-        log.info("Starting reward calculation for customerId={}, startDate={}, endDate={}",
-                customerId, startDate, endDate);
+        log.info("Starting reward calculation");
 
-        if (startDate.isAfter(endDate)) {
-            log.error("Invalid date range: startDate={} is after endDate={}", startDate, endDate);
-            throw new InvalidRequestException("From date cannot be after end date");
+        if (months != null && (startDate != null || endDate != null)) {
+            throw new InvalidRequestException(
+                    "Provide either months or startDate & endDate, not both");
         }
+
+        if (startDate != null && endDate != null) {
+            if (startDate.isAfter(endDate)) {
+                throw new InvalidRequestException("From date cannot be after end date");
+            }
+        }
+
+        else if (months != null) {
+            if (months <= 0) {
+                throw new InvalidRequestException("Months must be greater than 0");
+            }
+            endDate = LocalDate.now();
+            startDate = endDate.minusMonths(months);
+        }
+
+        else {
+            endDate = LocalDate.now();
+            startDate = endDate.minusMonths(3);
+        }
+
+        log.info("Final date range used: {} to {}", startDate, endDate);
 
         Customer customer = customerRepository.findById(customerId)
-                .orElseThrow(() -> {
-                    log.error("Customer not found with id={}", customerId);
-                    return new TransactionNotFoundException("Customer not found");
-                });
-
-        log.info("Customer found: {}", customer.getName());
+                .orElseThrow(() ->
+                        new TransactionNotFoundException("Customer not found"));
 
         List<Transaction> transactions =
-                transactionRepository.findByCustomerIdAndTxnDateBetween(
-                        customerId, startDate, endDate);
+                transactionRepository
+                        .findByCustomerIdAndTxnDateBetween(
+                                customerId, startDate, endDate);
 
         if (transactions.isEmpty()) {
-            log.error("No transactions found for customerId={} between {} and {}",
-                    customerId, startDate, endDate);
             throw new TransactionNotFoundException("No transactions found");
         }
-
-        log.info("Total transactions fetched: {}", transactions.size());
 
         Map<String, MonthlyRewardSummary> monthlyRewards = new HashMap<>();
 
@@ -70,44 +84,34 @@ public class RewardService {
             int points = calculatePoints(txn.getAmount());
             String month = txn.getTxnDate().getMonth().toString();
 
-            log.debug("Transaction id={}, amount={}, calculatedPoints={}",
-                    txn.getTxnId(), txn.getAmount(), points);
-
             monthlyRewards.putIfAbsent(month,
-                    new MonthlyRewardSummary(0, 0));
+                    new MonthlyRewardSummary(0, 0.0));
 
             MonthlyRewardSummary summary = monthlyRewards.get(month);
-
             summary.setTotalPoints(summary.getTotalPoints() + points);
             summary.setTotalAmount(summary.getTotalAmount() + txn.getAmount());
         }
 
-        List<TransactionDTO> txnDTOs = transactions.stream()
-                .map(t -> new TransactionDTO(
-                        t.getTxnId(),
-                        t.getAmount(),
-                        t.getTxnDate()))
-                .collect(Collectors.toList());
-
-        log.info("Reward calculation completed successfully for customerId={}", customerId);
+        List<TransactionDTO> transactionDTOList =
+                transactions.stream()
+                        .map(txn -> new TransactionDTO(
+                                txn.getTxnId(),
+                                txn.getAmount(),
+                                txn.getTxnDate()))
+                        .toList();
 
         return new RewardResponse(
                 customer.getCustomerId(),
                 customer.getName(),
                 monthlyRewards,
-                txnDTOs
+                transactionDTOList
         );
     }
 
     private int calculatePoints(double amount) {
 
-        if (amount <= 50) {
-            return 0;
-        }
-
-        if (amount <= 100) {
-            return (int) (amount - 50);
-        }
+        if (amount <= 50) return 0;
+        if (amount <= 100) return (int) (amount - 50);
 
         return (int) ((amount - 100) * 2 + 50);
     }
